--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     color: #d9dcd6;
 }
 
+/* nav style start */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -45,6 +46,7 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
+/*nav style end*/
 
 p {
     font-size: 16px;
