compiled css styles for hero content imgs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ a {
 }
 /*nav style end*/
 
+/*hero style start*/
 p {
     font-size: 16px;
 }
@@ -76,7 +77,9 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+/*hero style end*/
 
+/*benefits style start*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -135,8 +138,10 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/*benefits style end*/
 
-.search-engine-optimization {
+/*picture style start*/
+.content-images {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -145,50 +150,16 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.content-images img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.content-images h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/*picture style end*/
 
 .footer {
     padding: 30px;
